# hypothesis-fabric

./: .env_example  .gitignore  AGENTS.md  MVP_DESIGN.md  MVP_RETROSPECTIVE.md  MVP_TASKS.md  README.md  config.py  docker-compose.yml  llm.py  pyproject.toml
docs/: product-proposal.md  system-design.md
docs/diagrams/: 01-context.md  02-container.md  03-component.md  04-workflow.md  05-dataflow.md
docs/specs/: export-integration.md  feedback-loop.md  hypothesis-generator.md  ingestion-etl.md  justification-explanation.md  knowledge-graph.md  memory-context.md  observability-evals.md  orchestrator.md  retriever.md  scorer-ranker.md  serving-config.md
hypothesis-fabric-ui/: app.js  index.html  styles.css
scripts/: demo.sh  demo_ui.sh  demo_ui_v2.sh  demo_ui_v3.sh
src/hfabric/: cli.py  config.py  contracts.py  embeddings.py  llm.py  model_registry.py  schemas.py
tests/: conftest.py  test_llm.py
tests/golden/: __init__.py  golden_citations.json  golden_hypotheses.json  golden_rankings.json
tests/test_api/: test_api.py  test_eval.py  test_examples.py
tests/test_citation/: test_citation_bind.py
tests/test_cli/: test_cli.py  test_golden.py
tests/test_config/: test_model_registry.py
tests/test_etl/: test_chunker.py  test_embeddings.py  test_etl.py  test_faiss_index.py  test_kg_build.py  test_parser.py  test_xlsx_parser.py
tests/test_explain_slot/: test_explain_slot.py
tests/test_export/: test_csv_writer.py  test_docx.py  test_jira.py  test_pdf_writer.py  test_writer.py  test_youtrack.py
tests/test_generator/: test_gap_finder.py  test_synth.py
tests/test_integration/: test_integration.py  test_ui_flow.py
tests/test_kg/: conftest.py  test_client.py  test_memgraph_integration.py  test_schema.py  test_traversal.py
ui/: app.py  playground.py
ui_v3/: app.py
(+80 files in other folders)
