[project]
name = "hypothesis-fabric"
version = "0.1.0"
description = "Hypothesis Fabric — metallurgy hypothesis generation"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=0.1",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "pymupdf>=1.23",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "neo4j>=5.0",
    "gqlalchemy>=1.0",
    "rapidfuzz>=3.0",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.scripts]
hfabric = "hfabric.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
